--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,6 +25,7 @@
 body{
     background-image: url("../../media/wall1.jpg");
     background-position: center;
+    padding: 0;
 }
 
 
@@ -52,4 +53,22 @@ body{
 
 .sidebar-list{
     list-style: none;
+}
+
+
+input {
+    display: block;
+    width: 300px;
+    padding: 15px 10px;
+    border-radius: 8px;
+    border: 1px solid #ececec;
+    margin: 10px 0;
+}
+
+input[type="button"] {
+    width: 100%;
+    margin-top: 35px;
+    background-color: #0df07e;
+    color: white;
+    font-weight: lighter;
 }
